Client component changed

--- a/src/Components/Home.css
+++ b/src/Components/Home.css
@@ -158,6 +158,11 @@
   text-align: center;
 }
 
+.listeditems{
+  
+  align-content: center;
+  text-align: center;
+}
 .social-media {
   padding: 2rem;
   background-color: #FFFFFF; 
