--- a/src/Components/Login.css
+++ b/src/Components/Login.css
@@ -23,12 +23,16 @@
   label {
     font-size: 1rem;
     margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    margin-right: 2rem;
   }
   
   input {
     padding: 0.75rem;
     border-radius: 5px;
     border: 1px solid #ddd;
+   
   }
   
   button {
